<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" 
    android:gravity="center_horizontal" >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF" 
        android:text="@string/panic_occured" 
        android:textSize="30px" 
        android:layout_marginBottom="10px" />
    <ImageView android:src="@drawable/panic_alert" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF" 
        android:text="@string/panic_alert_in_progress" 
        android:textSize="25px" />
        
    <Button 
    	android:id="@+id/panicDialogDismissButton"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/ok" 
    	android:layout_marginTop="30px" />
    	
</LinearLayout>